mule-user-guide/v/3.6/concur-connector.adoc
=  SAP Concur连接器
:keywords: connectors, anypoint, studio, concur, databases

_选择_

用于Mule和CloudHub的Concur Anypoint连接器用作Concur和Mule应用程序之间的双向网关。

要使用Concur连接器，至少必须满足以下要求：

*  Concur开发者帐户 - 在 http://developer.concur.com/[developer.concur.com]处注册一个

* 由Concur分配的消费者密钥;请参阅有关如何 link:/mule-user-guide/v/3.6/using-a-connector-to-access-an-oauth-api[使用Concur连接器访问OAuth API]的详细文档。

*Release Notes*： link:/release-notes/concur-connector-release-notes[Concur连接器发行说明]

== 假设

本文档假定您熟悉Concur，Mule和Anypoint Studio。

== 在Anypoint Studio中安装Concur Connector

您可以在Anypoint Studio中"test drive"连接器：

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

要在生产环境中使用Concur连接器，您必须具有：

* 使用Mule的企业许可证

*  CloudHub Starter，Professional或Enterprise帐户

请联系mailto：info@mulesoft.com [MuleSoft销售团队]获取其中任何一个。 （详细了解 link:/mule-user-guide/v/3.6/installing-an-enterprise-license[安装企业许可证]。）

== 配置Concur连接器

要在Mule应用程序中使用Concur连接器，您必须配置：

* 应用程序中所有Concur连接器使用的全局Concur元素（阅读有关 link:/mule-user-guide/v/3.6/global-elements[全球元素在骡子]的更多信息）。

* 应用程序中每个Concur连接器实例的参数。

===  Studio Visual Editor

请按照以下步骤在Mule应用程序中创建全局Concur配置：

. 点击画布底部的*Global Elements*标签，然后点击*Create*。

. 在*Choose Global Type*向导中，使用过滤器进行定位，然后选择Concur **,**，然后单击*OK*。

. 根据下表配置参数。
+
image:ConcurGlobalElementProps.png[ConcurGlobalElementProps]
+
[%header%autowidth.spread]
|===
| {参数{1}}说明
| *Name*  |为配置输入一个名称，以便稍后可以通过流中的`config-ref`参数
| *Username*  |用于连接到Concur实例的用户名
| *Password*  |与用户名关联的密码
| *API URL*  |连接到Concur API的基本URL
| *Consumer Key*  |分配给该帐户的使用者密钥
|===

. 访问*Pooling Profile*标签，配置与通过连接池管理多个连接相关的任何设置。

. 访问*Reconnection*选项卡，配置与Mule在失去与Concur的连接时应执行的重新连接策略相关的任何设置。

. 点击*OK*保存全局连接器配置。

. 返回Studio中的*Message Flow*标签。

请按照以下步骤配置流中Concur连接器的参数：

. 将Concur连接器拖到画布上，然后选择它以打开属性编辑器控制台。

. 根据下表配置连接器的参数。
+
[%header%autowidth.spread]
|===
| {字段{1}}说明 |缺省
| *Display Name*  |为您的应用程序中的连接器输入唯一标签。 |同步
| *Connector Configuration*  |连接到链接到此连接器的全局元素。全局元素封装有关到目标资源或服务的连接的可重用数据。选择您刚创建的全局Concur连接器元素。 | 
| *Operation*  |选择此组件必须执行的操作。 |批处理参与者列表
|===

. 保存您的配置。

===  XML编辑器

首先，确保您已将Concur名称空间包含在配置文件中。

[source,xml, linenums]
----
http://www.mulesoft.org/schema/mule/concur
http://www.mulesoft.org/schema/mule/concur/current/mule-concur.xsd
----

请按照以下步骤在应用程序中配置Concur连接器。

. 首先，使用以下全局配置代码在您的流的外部和上方创建全局Concur配置。
+
[source,xml, linenums]
----
<concur:config name="Concur" username="YOUR_USERNAME" password="YOUR_PASSWORD" apiUrl="YOUR_SERVICENOW_URI" consumerKey="YOUR_CONSUMER_KEY" doc:name="Concur"/>
----
+
[%header%autowidth.spread]
|===
| {属性{1}}说明
| *name*  |为配置输入一个名称，以便可以从流中引用它。
| *username*  |用于连接到Concur实例的用户名。
| *password*  |登录到Concur实例的密码。
| *apiUrl*  | Concur实例的URL。
| *consumerKey*  |与您的Concur帐户关联的消费者密钥
|===

. 构建您的应用程序流程，然后使用以下操作之一添加Concur连接器。请按照下表中的链接访问每个操作的详细配置参考。
+
[%header%autowidth.spread]
|====
| {操作{1}}说明
| <concur:batch-attendee-list>  |对参与者列表进行批量更改
| <concur:batch-list-items>  |对列表项进行批量更改
| <concur:close-payment-batch>  | POST付款批量关闭
| <concur:create-or-update-users>  |使用一批用户配置文件创建或更新用户
| <concur:create-receipt-image>  |在收据存储中创建新图像
| <concur:get-attendee-details>  |获取参加者详细信息
| <concur:get-expense-entry-details>  |获取费用条目详细信息
| <concur:get-expense-group-configuration>  |检索费用组配置
| <concur:get-expense-report-detail>  |获取费用报表详细信息
| <concur:get-itinerary>  |获取行程详情
| <concur:get-list-details>  |获取列表详细信息
| <concur:get-list-items>  |获取列表项请求
| <concur:get-list-of-attendees>  |获取与会者名单
| <concur:get-list-of-expense-reports>  |获取费用报表列表
| <concur:get-list-of-form-fields>  |获取员工表单字段列表
| <concur:get-list-of-forms-of-payment>  |检索付款方式列表
| <concur:get-list-of-lists>  |获取列表的列表
| <concur:get-list-of-payment-batches>  |获取支付批次列表
| <concur:get-list-of-receipts> +  |获取与OAuth令牌关联的用户拥有的所有收据ID列表
| <concur:get-receipt-image-uri>  |获取给定ID的Receipt Image的URI
| <concur:get-travel-profile>  |检索旅行档案
| <concur:get-travel-requests-list>  |检索旅行请求列表
| <concur:get-updated-travel-profiles>  |检索更新的旅行档案列表
| <concur:get-user-profile>  |检索用户配置文件
| <concur:list-itineraries>  |检索行程列表
| <concur:post-expense-entry-attendee>  | POST费用分录参加者
| <concur:post-expense-entry-request>  | POST费用分录请求。 +
注意：Concur建议您为每个请求发布一个费用条目。
| <concur:post-expense-report-header>  | POST费用报表标题
| concur：post-expense-report-header-batch>]  | POST费用报表标题批处理
| <concur:post-expense-report-submit-request>  | POST费用报告提交请求
| <concur:quick-expense>  |发布新的快速费用
| <concur:quick-expense-list>  |检索所有快速费用
| <concur:trip-approval>  |批准Trip行程
| <concur:update-loyalty-program>  |更新忠诚度计划
|====


== 示例用例

作为Concur管理员，我想创建费用报告并将其提交给Concur。

. 将HTTP端点拖到新流程中。打开连接器的属性编辑器并单击绿色加号创建一个新的*Connector Configuration*元素。 +
  
. 填写两个必填字段：*Host*和*Port*。将主机设置为`localhost`，并将端口保留为默认值`8081`。
+
[%header%autowidth.spread]
|===
| {字段{1}}值
| *Name*  | `HTTP_Listener_Configuration`
| *Host*  | `localhost`
| *Port*  | `8081`
|===

. 返回连接器的属性编辑器，设置`submitreport`路径。
新流程随后可在`+http://localhost:8081/submitreport+`路径中访问。

. 在HTTP连接器之后添加一个Set Payload转换器，以将有效负载设置为与Concur预期的格式相匹配的预定义的一组值

. 根据下表配置设置有效负载变压器。
+
[%header,cols="2*"]
|===
| {字段{1}}值
|显示名称 |四月费用
|值a |
'['name'：'April Expenses'，'purpose'：'四月的所有费用'，'comment'：'这是一条评论。'，'orgUnit1'：'US'，'orgUnit2'：'NW' 'orgUnit3'： '微软'， 'CUSTOM1'： '客户'，'丘斯托

m2'：'本地'，'userDefinedDate'：'2014-03-26 15：15：07.0']]
|===
+
image:ex2.png[EX2]
+
[NOTE]
====
您可以配置外部源（如.csv文件），而不是使用“设置有效负载”转换器将值提供给费用报告。
====

. 将Concur连接器拖到流中以发布费用报表标题。

. 点击*Connector Configuration*字段旁边的加号，添加新的全局元素。

. 根据下表配置此全局元素（有关更多详细信息，请参阅配置Concur连接器）。
+
[%header%autowidth.spread]
|===
|属性 |说明
|名称 |输入此全局元素的唯一标签以供连接器参考
|用户名 |输入用于连接到Concur实例的用户名
|密码 |输入用户密码
| API网址 |输入连接到Concur API的基本网址
|使用者密钥 |输入分配给使用者的使用者密钥
|===

. 点击*Test Connection*确认Mule可以与您的Concur实例连接。如果连接成功，请单击*OK*保存全局元素的配置。如果不成功，请修改或更正任何不正确的参数，然后重新测试。

. 回到Concur连接器的属性编辑器中，根据下表配置其余参数。
+
[%header%autowidth.spread]
|===
| {字段{1}}值
|显示名称 |过帐费用报表标题
|连接器配置 |同意（您创建的全局元素）
|操作 |过帐费用报表标题
|一般|
选择*Define Attributes*，然后输入以下内容：

名称：＃[*payload*。name]

目的：＃[*payload*。purpose]

评论：＃[*payload*。评论]

OrgUnit1：＃[*payload*。orgUnit1]

OrgUnit2：＃[*payload*。orgUnit2]

OrgUnit3：＃[*payload*。orgUnit3]

Custom1：＃[*payload*。custom1]

Custom2：＃[*payload*。custom2]

用户定义数据：＃[*payload*。userDefinedData]

|===
+
image:conc1.png[conc1]

. 在Set Payload转换器和Concur连接器之间拖动一个DataMapper转换器，然后点击它打开它的属性编辑器。

. 根据以下步骤配置DataMapper的属性。

.. 在*Input type*中选择**Map<k,v>**，然后选择*User Defined.*

.. 点击**Create/Edit Structure**。

.. 为地图输入名称，然后在*Type*下选择*Element*。

.. 根据下表将字段添加到输入结构中。
+
[%header%autowidth.spread]
|===
| {名称{1}}输入
| {评论{1}}字符串
| {CUSTOM1 {1}}字符串
| {CUSTOM2 {1}}字符串
| {名称{1}}字符串
| {orgUnit1 {1}}字符串
| {orgUnit2 {1}}字符串
| {orgUnit3 {1}}字符串
| {目的{1}}字符串
| {userDefinedData {1}}字符串
|===

.. 输出属性会自动配置为对应于Concur连接器。

.. 点击*Create Mapping*

.. 将每个输入数据字段拖动到其相应的输出Concur字段。

.. 单击“画布”上的空白区域以保存更改。

. 添加变量转换器以保留消息有效内容中的报告ID。根据下表配置变压器。
+
[%header%autowidth.spread]
|====
| {字段{1}}值
|显示名称 |提取报告ID（或您喜欢的任何其他名称）
|操作 |设置变量
|姓名 |报告ID
|值 |＃[常规：payload.reportDetailsUrl.tokenize（ '/'）[ -  1]]
|====
+
image:ex3.png[EX3]

. 添加一个设置负载变换器，然后根据下表进行配置。
+
[%header%autowidth.spread]
|====
| {字段{1}}值
|显示名称 |设置有效负载
|值 | `#[['crnCode':'US','expKey':'BUSPR','description':'Business Promotions','transactionDate':'2014-01-12', 'transactionAmount':'29', 'comment':'Brochure Sample', 'vendorDescription':'Kinkos','isPersonal':'N']]`
|====
+
image:ex4.png[EX4]

. 向流中添加另一个Concur连接器以创建费用输入请求。

. 在*Connector Configuration*字段中，选择您创建的全局Concur元素。

. 根据下表配置其余参数。
+
[%header%autowidth.spread]
|====
| {字段{1}}值
|显示名称 |过帐费用分录请求
|配置参考 | Concur（您创建的全局元素）
|操作 |过帐费用分录请求
|报告ID  | `#[flowVars['ReportID']]`
|一般|
选择*Define Attributes*，然后输入以下内容：

Crn代码：＃[*payload*。expense.crnCode]

Exp Key：＃[*payload*。expense.expKey]

交易日期：＃[*payload*。expense.transactionDate]

交易金额：＃[*payload*。expense.transactionAmount]

评论：＃[*payload*。expense.comment]

供应商说明：＃[*payload*。expense.vendorDescription]

是个人的：＃[*payload*。expense.isPersonal]

|====
+
image:conc2.png[CONC2]

. 在设置有效载荷变换器和后期费用入口请求之间拖动另一个DataMapper，然后按照以下步骤对其进行配置。

.. 在*Input type*中选择**Map<k,v>**，然后选择*User Defined.*

.. 点击**Create/Edit Structure**。

.. 输入地图名称，然后在*Type*下选择*Element*。

.. 根据下表将字段添加到输入结构中。
+
[%header%autowidth.spread]
|===
| {注释{1}}输入
| {crnCode {1}}字符串
| {描述{1}}字符串
| {expKey {1}}字符串
| {isPersonal {1}}字符串
| {transactionAmount {1}}字符串
| {transactionDate {1}}字符串
| {vendorDescription {1}}字符串
|===
.. 输出属性会自动配置为对应于Concur连接器。

.. 点击*Create Mapping*。

.. 将每个输入数据字段拖动到其相应的输出Concur字段。

.. 单击“画布”上的空白区域以保存更改。

. 最后，在流程末尾添加一个Concur连接器，以将费用报告发布到Concur。

. 在*Connector Configuration*字段中，选择您创建的Concur全局元素。

. 根据下表配置其余参数。
+
[%header%autowidth.spread]
|===
| {字段{1}}值
|显示名称 |过帐费用报表
|操作 |发布费用报告提交请求
|报告ID  |＃[flowVars ['ReportID']]
|===
+
image:conc3.png[CONC3]

. 将项目作为Mule应用程序运行。

===  XML编辑器


. 将*concur:config* **全局元素添加到您的项目中，然后根据下表配置其属性（请参阅下面的代码以获取完整示例）。
+
[source,xml, linenums]
----
<concur:config name="Concur" username="<your username>" password="<your password>" apiUrl="<the API URL of your Concur instance>" consumerKey="<your Consumer Key>" doc:name="Concur"/>
----
+
[%header%autowidth.spread]
|===
| {属性{1}}值
| {名称{1}}的Concur
| DOC：名称 |的Concur
|用户名 |您的用户名
|密码 |您的密码
| apiUrl  |您的Concur实例的URL
| consumerKey  |您的消费者密钥
|===

. 创建一个流并在其中添加一个HTTP连接器，配置如下：
+
[source,xml]
----
<http:listener config-ref="HTTP_Listener_Configuration" path="submitreport" doc:name="HTTP"/>
----
+
[%header%autowidth.spread]
|====
| {属性{1}}值
| *doc:name*  | `HTTP`
| *config-ref*  | `HTTP_Listener_Configuration`
| *path*  | `submitreport`
|====

.  连接器中的*config-ref*属性引用全局元素，现在您必须在流程之外创建此全局元素。
+
[source,xml]
----
<http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
----
+
[%header%autowidth.spread]
|===
| {属性{1}}值
| *name*  | `HTTP_Listener_Configuration`
| *host*  | `localhost`
| *port*  | `8081`
| *doc:name*  | `HTTP Listener Configuration`
|===
. 在HTTP连接器之后，添加*Set Payload transformer*以将有效负载设置为费用报表标题。
+
[source,xml, linenums]
----
<set-payload doc:name="Set Payload" value="#[['name':'April Expenses','purpose':'All expenses for April','comment':'This is a comment.','orgUnit1':'US','orgUnit2':'NW','orgUnit3':'Redmond','custom1':'Client','custom2':'Local','userDefinedDate':'2014-03-26 15:15:07.0']]"/>
----

. 向流中添加一个*concur:post-expense-report-header*元素。根据下表配置属性。
+
[source,xml, linenums]
----
<concur:post-expense-report-header config-ref="Concur" doc:name="Post Expense Report Header">
----
+
[%header%autowidth.spread]
|===
| {属性{1}}值
|名称 |＃[*payload*。名]
|用途 |＃[*payload*。目的]
|评论 |＃[*payload*。评论]
| OrgUnit1  |＃[*payload*。orgUnit1]
| OrgUnit2  |＃[*payload*。orgUnit2]
| OrgUnit3  |＃[*payload*。orgUnit3]
|特制1  |＃[*payload*。CUSTOM1]
|特制2  |＃[*payload*。CUSTOM2]
|用户定义数据 |＃[*payload*。userDefinedData]
|===

. 在设置有效负载转换器和Concur连接器之间添加一个*DataMapper*元素。
+
[source,xml, linenums]
----
<data-mapper:transform config-ref="Map_To_Report" doc:name="Map To Report"/>
----

. 您必须通过Studio Visual Editor配置*DataMapper*元素。将视图切换到*Message Flow*视图，然后单击DataMapper元素以设置其属性。 +

.. 在*Input type*中选择**Map<k,v>**，然后选择*User Defined.*

.. 点击**Create/Edit Structure**。

.. 为地图输入名称，然后在*Type*下选择*Element*。

.. 根据下表将字段添加到输入结构中。
+
[%header%autowidth.spread]
|===
| {名称{1}}输入
| {评论{1}}字符串
| {CUSTOM1 {1}}字符串
| {CUSTOM2 {1}}字符串
| {名称{1}}字符串
| {orgUnit1 {1}}字符串
| {orgUnit2 {1}}字符串
| {OrgUnit3 {1}}字符串
| {userDefinedata {1}}字符串
|===

. 在DataMapper之后的流中添加一个**set-variable**元素以保存费用报表ID。
+
[source,xml, linenums]
----
<set-variable variableName="ReportId" value="#[groovy:payload.reportDetailsUrl.tokenize('/')[-1]]" doc:name="Extract Report Id"/>
----
+
[%header%autowidth.spread]
|===
| {属性{1}}值
| `variableName`  | ReportId
| {值{1}}＃[常规：payload.reportDetailsUrl.tokenize（ '/'）[ -  1]]
| doc：name  |提取报告ID
|===

. 现在，添加一个*set-payload*元素。
+
[source,xml, linenums]
----
<set-payload value="#[['crnCode':'US','expKey':'BUSPR','description':'Business Promotions','transactionDate':'2014-01-12','transactionAmount':'29','comment':'Brochure Sample','vendorDescription':'Kinkos','isPersonal':'N']]" doc:name="Set Payload"/>
----
+
[%header,cols="2*"]
|===
| {属性{1}}值
|值a |
[source,xml, linenums]
----
#[['crnCode':'US','expKey':'BUSPR','description':'Business Promotions','transactionDate':'2014-01-12','transactionAmount':'29','comment':'Brochure Sample','vendorDescription':'Kinkos','isPersonal':'N']]
----
| doc：名称 |设置有效负载
|===

. 向流中添加一个*concur:post-expense-entry-request*元素。
+
[source,xml, linenums]
----
<concur:post-expense-entry-request config-ref="Concur" reportId="#[flowVars['ReportID']]" doc:name="Post Expense Entry Request">
----
+
根据下表配置属性。
+
[%header%autowidth.spread]
|====
| {属性{1}}值
| {crnCode {1}} payload.expense.crnCode
| {expKey {1}} payload.expense.expKey
| {描述{1}} payload.expense.description
| {transactionDate {1}} payload.expense.transactionDate
| {transactionAmount {1}} payload.expense.transactionAmount
| {评论{1}} payload.expense.comment
| {VendorDescription {1}} payload.expense.vendorDescription
| {isPersonal {1}} payload.expense.isPersonal
|====

. 在设置有效负载转换器和Concur连接器之间添加一个*DataMapper*元素。
. 通过Studio的Visual Editor配置*DataMapper*元素。将视图切换到*Message Flow*视图，然后单击DataMapper元素以设置其属性。 +
.. 在*Input type*中选择地图**<k,v>**，然后选择*User Defined*。
.. 点击**Create/Edit Structure**。
.. 输入地图名称，然后在*Type*下选择*Element*。
.. 根据下表将字段添加到输入结构中。
+
[%header%autowidth.spread]
|===
| {注释{1}}输入
| {crnCode {1}}字符串
| {描述{1}}字符串
| {expKey {1}}字符串
| {isPersonal {1}}字符串
| {transactionAmount {1}}字符串
| {transactionDate {1}}字符串
| {vendorDescription {1}}字符串
|===

.. 输出属性会自动配置为对应于Concur连接器。

.. 单击*Create Mapping,*，然后将每个输入数据字段拖动到其相应的输出Concur字段。单击画布上的空白区域以保存更改。

. 添加*concur:post-expense-report-submit-request*元素以提交费用报告以供同意。

[source,xml, linenums]
----
<concur:post-expense-report-submit-request config-ref="Concur" 
reportId="#[flowVars['ReportID']]" doc:name="Post Expense Report"/>
----


== 示例代码

[source,xml, linenums]
----
<mule xmlns:json="http://www.mulesoft.org/schema/mule/json" xmlns:concur="http://www.mulesoft.org/schema/mule/concur" xmlns:data-mapper="http://www.mulesoft.org/schema/mule/ee/data-mapper" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:file="http://www.mulesoft.org/schema/mule/file" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/concur http://www.mulesoft.org/schema/mule/concur/current/mule-concur.xsd
http://www.mulesoft.org/schema/mule/ee/data-mapper http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd">
    <concur:config name="Concur" username="conor@whiteskylabs.com" password="plots71Erie" apiUrl="https://www.concursolutions.com" consumerKey="hYzvi7B7QUukyUs7gXomn4" doc:name="Concur"/>
    <data-mapper:config name="Map_To_Report" transformationGraphPath="map_to_report.grf" doc:name="Map_To_Report"/>
    <data-mapper:config name="Map_To_ReportEntries" transformationGraphPath="map_to_reportentries.grf" doc:name="Map_To_ReportEntries"/>
    <http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081"/>
 
    <flow name="concur-sample-usecase-submitreport" doc:name="concur-sample-usecase-submitreport">
        <http:listener config-ref="HTTP_Listener_Configuration" path="submitreport" doc:name="/submitreport"/>
        <set-payload doc:name="Set Payload" value="#[['name':'April Expenses','purpose':'All expenses for April','comment':'This is a comment.','orgUnit1':'US','orgUnit2':'NW','orgUnit3':'Redmond','custom1':'Client','custom2':'Local','userDefinedDate':'2015-03-26 15:15:07.0']]"/>
        <data-mapper:transform config-ref="Map_To_Report" doc:name="Map To Report"/>
        <concur:post-expense-report-header config-ref="Concur" doc:name="Post Expense Report Header">
            <concur:report-header name="#[payload.name]" purpose="#[payload.purpose]" comment="#[payload.comment]" orgUnit1="#[payload.orgUnit1]" orgUnit2="#[payload.orgUnit2]" orgUnit3="#[payload.orgUnit3]" custom1="#[payload.custom1]" custom2="#[payload.custom2]" userDefinedDate="#[payload.userDefinedDate]"/>
        </concur:post-expense-report-header>
        <set-variable variableName="ReportId" value="#[groovy:payload.reportDetailsUrl.tokenize('/')[-1]]" doc:name="Extract Report Id"/>
        <set-payload value="#[['crnCode':'US','expKey':'BUSPR','description':'Business Promotions','transactionDate':'2015-01-12','transactionAmount':'29','comment':'Brochure Sample','vendorDescription':'Kinkos','isPersonal':'N']]" doc:name="Set Payload"/>
        <data-mapper:transform config-ref="Map_To_ReportEntries" doc:name="Map To ReportEntries"/>
        <concur:post-expense-entry-request config-ref="Concur" reportId="#[flowVars['ReportID']]" doc:name="Post Expense Entry Request">
            <concur:report-entries>
                <concur:expense crnCode="#[payload.expense.crnCode]" expKey="#[payload.expense.expKey]" description="#[payload.expense.description]" transactionDate="#[payload.expense.transactionDate]" transactionAmount="#[payload.expense.transactionAmount]" comment="#[payload.expense.comment]" vendorDescription="#[payload.expense.vendorDescription]" isPersonal="#[payload.expense.isPersonal]"/>
            </concur:report-entries>
        </concur:post-expense-entry-request>
        <concur:post-expense-report-submit-request config-ref="Concur" reportId="#[flowVars['ReportID']]" doc:name="Post Expense Report"/>
    </flow>   
</mule>
----

== 另请参阅

*  http://mulesoft.github.io/mule-sap-concur-connector/[SAP Concur技术参考]。

* 访问Concur连接器的 link:/release-notes/concur-connector-release-notes[发行说明]。
